# day-dreamer

./: STARTUP.md
.qoder/quests/: user-permission-architecture-design.md
backend/: .env.dev  .gitignore  .uvrc  Dockerfile  MIGRATION_GUIDE.md  README.md  README_CONSOLIDATION.md  STARTUP_CONSOLIDATION.md  UV_MANAGER_REMOVAL.md  UV_MIRROR_CONFIG.md  celery_app.py  docker-compose.yml  init_data.py  init_db.sql  migrate.py  pyproject.toml  requirements.txt  start.py  start_celery.py  start_modern.py  worker.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  apis.py  auth.py  environments.py  reports.py  tasks.py  test_cases.py  users.py  variables.py
backend/app/core/: celery.py  celery_app.py  config.py  database.py  database_config.py  redis.py  security.py
backend/app/models/: __init__.py  api_definition.py  environment.py  permission.py  role.py  test_case.py  test_execution.py  user.py  variable.py
backend/app/schemas/: __init__.py  api.py  auth.py  environment.py  test_case.py  user.py
backend/app/services/: api_service.py  auth_service.py  environment_service.py  report_service.py  test_case_service.py  test_execution_service.py  user_service.py  variable_service.py
backend/app/tasks/: __init__.py  report_generation.py  system_maintenance.py  test_execution.py
backend/app/utils/: assertion_validator.py  exceptions.py  http_client.py  logger.py  middleware.py  response.py  variable_resolver.py
backend/tests/: conftest.py  test_auth.py  test_users.py
